force-app/main/default/objects/Condidate__c/Condidate__c.object-meta.xml
<CustomObject>
    <label>Condidate</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>