force-app/main/default/objects/Condidate__c/fields/Condidate_Status__c.field-meta.xml
<CustomField>
    <fullName>Condidate_Status__c</fullName>
    <label>Condidate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Webinar - Attended</fullName>
            </value>
            <value>
                <fullName>Webinar -Not Attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>